overflow on body fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,3 +91,11 @@ main {
 //   margin-left: 45%;
 //   margin-bottom: 40px;
 // }
+
+html,
+body {
+  position: relative;
+  overflow-x: hidden;
+  width: 100%;
+  /* Ensure the body does not extend beyond the viewport */
+}
